--- a/index.html
+++ b/index.html
@@ -12,12 +12,7 @@
   </head>
   <body>
     <h1>Webmasters' Networking Group | Redding, California</h1>
-    <h2>Ambidextrous.</h2>
-    <h3>Anti-Intranet..</h3>
-    <p>...</p>
-    <h4>..</h4>
-    <h5>.</h5>
-    <h6>*</h6>
+    <h2>Ambidextrous Artisans</h2>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
