--- a/index.html
+++ b/index.html
@@ -7,12 +7,34 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    
+    <style>
+      @font-face
+      {
+        font-family: 'IBM Plex Sans';
+        src: url("./IBMPlexSans-Regular.woff") format("woff");
+      }
+      @font-face
+      {
+        font-family: 'IBM Plex Serif';
+        src: url("./IBMPlexSerif-Regular.woff") format("woff");
+      }
+      body
+      {
+        font-family: 'IBM Plex Serif';
+      }
+      h1, h2, h3, h4, h5, h6
+      {
+        font-family: 'IBM Plex Sans';
+        font-weight: bold;
+      }
+    </style>
 
     <title>Webmasters | Redding</title>
   </head>
   <body>
-    <h1>Webmasters' Networking Group | Redding, California</h1>
-    <h4>Ambidextrous Artisans</h4>
+    <h1>Webmasters Ltd | Redding, California</h1>
+    <h4>Ambidextrous Artisans of Webmastery</h4>
     
 <h2>
 	Web Site Terms and Conditions of Use
